--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+astroid==2.2.5
 html2text==2014.7.3
-Markdown==2.4.1
+isort==4.3.17
+lazy-object-proxy==1.3.1
+Markdown==3.2.1
+mccabe==0.6.1
+mdx-truly-sane-lists==1.2
 nose==1.3.3
-requests==2.6.0
+pkg-resources==0.0.0
+pylint==2.3.1
+pymdown-extensions==7.0
 PyYAML==5.1
-mdx_truly_sane_lists==2.1
+requests==2.6.0
+six==1.12.0
+typed-ast==1.3.5
+wrapt==1.11.1
