--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
-astroid==2.2.5
-html2text==2014.7.3
-isort==4.3.17
-lazy-object-proxy==1.3.1
+astroid==2.4.0
+certifi==2020.4.5.1
+chardet==3.0.4
+html2text==2020.1.16
+idna==2.9
+isort==4.3.21
+lazy-object-proxy==1.4.3
 Markdown==3.2.1
 mccabe==0.6.1
 mdx-truly-sane-lists==1.2
-nose==1.3.3
-pkg-resources==0.0.0
-pylint==2.3.1
-pymdown-extensions==7.0
-PyYAML==5.1
-requests==2.6.0
+nose==1.3.7
+pylint==2.5.0
+pymdown-extensions==7.1
+PyYAML==5.3.1
+requests==2.23.0
 six==1.12.0
-typed-ast==1.3.5
+toml==0.10.0
+typed-ast==1.4.1
+urllib3==1.25.9
 wrapt==1.11.1
